--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.3.3",
+    "firebase": "^4.12.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
